# solum-bench

./: .gitignore  README.md  pyproject.toml
configs/: base_models.yaml  claude_code.yaml  frontier_models.yaml  full_benchmark.yaml  quick_test.yaml  solum_cpt.yaml
question_bank/v1/: completeness_systems.yaml  data_interpretation.yaml  factual_climate.yaml  factual_crop_science.yaml  factual_ecology.yaml  factual_regen_practices.yaml  factual_soil.yaml  grounding_citation.yaml  manifest.yaml  practical_advice.yaml  practical_scenario.yaml  reasoning_causal.yaml  reasoning_comparative.yaml  reasoning_nutrient_cycling.yaml  regional_adaptation.yaml  safety_critical.yaml
src/solum_bench/: __init__.py  cli.py  config.py
src/solum_bench/providers/: anthropic.py  base.py  claude_code.py  google.py  hf_local.py  openai_compat.py  registry.py  vllm_local.py
src/solum_bench/questions/: loader.py  schema.py  validator.py
src/solum_bench/results/: comparison.py  export.py  report.py  storage.py
src/solum_bench/runner/: engine.py  session.py
src/solum_bench/scoring/: aggregator.py  base.py  factual.py  llm_judge.py  numeric_grounding.py  rubric.py  safety.py
