[project]
name = "solum-bench"
version = "0.1.0"
description = "Comprehensive benchmark for regenerative agriculture LLM quality evaluation"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-only"}
authors = [{name = "Wes Kennedy"}]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "tqdm>=4.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
google = ["google-genai>=1.0"]
vllm = ["vllm>=0.6", "torch>=2.4"]
hf = ["transformers>=4.46", "torch>=2.4", "accelerate>=1.0"]
all-api = ["solum-bench[anthropic,openai,google]"]
dev = ["pytest", "ruff", "pytest-asyncio"]

[project.scripts]
solum-bench = "solum_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solum_bench"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
